--- a/app/html/index.html
+++ b/app/html/index.html
@@ -11,6 +11,6 @@
   </style>
   <body>
     <p class="centered"><img src="microbot.png" alt="microbot"/></p>
-    <p class="centered">Container hostname GitHub Actions: XXX</p>
+    <p class="centered">Prueba Blog: XXX</p>
   </body>
 </html>
